[package]
name = "wikit"
version = "0.1.0"
authors = ["ikey4u <pwnkeeper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adler = "1.0.1"
compress = "0.2.1"
async-std = { version = "1.6", features = [ "attributes" ] }
sqlx = { version = "0.4.2", features = [ "runtime-async-std-native-tls", "postgres" ] }
futures = "0.3.8"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
tera = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ripemd128 = "0.1.2"
clap = "2"
regex = "1"
anyhow = "1.0.38"
ron = "0.6.4"
dirs = "3.0.2"
once_cell = "1.7.2"

[dependencies.nom]
version = "6"
features = ["regexp"]

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
default-features = false
features = ["tera_templates", "serve"]
