[package]
name = "wikit"
version = "0.4.0-beta.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wikit-core = { path = "../core" }
clap = "2"
serde = "1.0"
serde_derive = "1.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "91e3b4397a1637d0f55f23db712cf7bda0c7f891" }
anyhow = "1.0.38"
rusqlite = { version = "0.27.0", features = ["bundled"] }
indoc = "1.0.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2.2"
