[package]
name = "wikit-core"
version = "0.1.0"
authors = ["ikey4u <pwnkeeper@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adler = "1.0.1"
compress = "0.2.1"
async-std = { version = "1.6", features = [ "attributes" ] }
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "postgres" ] }
futures = "0.3.8"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "91e3b4397a1637d0f55f23db712cf7bda0c7f891", features = ["json"] }
tera = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ripemd128 = "0.1.2"
clap = "2"
regex = "1"
anyhow = "1.0.38"
dirs = "3.0.2"
once_cell = "1.9.0"
minilzo-rs = "0.6.0"
encoding_rs = "0.8.28"
chrono = "0.4"
dialoguer = "0.8.0"
indicatif = "0.16.2"
thiserror = "1.0.30"
fst = { version = "0.4", features = ["levenshtein"] }
memmap = "0.7.0"
toml = "0.5.8"
url = "2.2.2"
md-5 = "0.9.1"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
json5 = "0.4.1"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.5", features = [ "headers", "ws" ] }
tower-http = { version = "0.2", features = ["fs", "cors"] }
tower = "0.4"
tempfile = "3"
rusqlite = { version = "0.27.0", features = ["bundled"] }
notify = "4.0"
http = "0.2"
headers = "0.3"
wikit-proto = { path = "../proto" }
log = "0.4"

[dependencies.nom]
version = "6"
features = ["regexp"]
