[package]
name = "wikit-desktop"
version = "0.1.0"
description = "Wikit Desktop - A universal dictionary for human"
authors = ["ikey4u <pwnkeeper@gmail.com>"]
license = "MIT"
repository = "https://github.com/ikey4u/wikit"
default-run = "wikit-desktop"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri/", rev = "651fc01492f74cc0dafba20b2fcbbb7a3a3f05e1", features = ["api-all"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
wikit-core = { path = "../../core" }
once_cell = "1.8.0"
opener = "0.5.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
