[package]
name = "wikit-desktop"
version = "0.1.0-beta.1"
description = "Wikit Desktop - A universal dictionary for human"
authors = ["ikey4u <pwnkeeper@gmail.com>"]
license = "MIT"
repository = "https://github.com/ikey4u/wikit"
default-run = "wikit-desktop"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri/", rev = "411618f0def040fc412a93e28bcd868180e2c29e", features = ["api-all"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
wikit-core = { path = "../../core" }
once_cell = "1.8.0"
opener = "0.5.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
