[package]
name = "wikit-desktop"
version = "0.5.0"
description = "Wikit Desktop - A universal dictionary for human"
authors = ["ikey4u <pwnkeeper@gmail.com>"]
license = "MIT"
repository = "https://github.com/ikey4u/wikit"
default-run = "wikit-desktop"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }
trunk = "0.16.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.2", features = ["api-all"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
wikit-core = { path = "../../core" }
wikit-proto = { path = "../../proto" }
once_cell = "1.9.0"
opener = "0.5.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.4.6" }
tower-http = { version = "0.2.0", features = ["fs"] }
anyhow = "1.0.56"
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
