[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-logger = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.29"
js-sys = "0.3.56"
log = "0.4.16"
gloo = { version = "0.7", features = [ "futures" ] }
web-sys = { version = "0.3.56", features = [ "InputEvent", "HtmlIFrameElement" ] }
anyhow = { version = "1.0" }
futures-channel = "0.3"
futures = "0.3.21"
wikit-proto = { path = "../../proto" }
gloo-utils = "0.1.5"
time = { version = "0.3.15", features = [ "wasm-bindgen" ] }
yew = { version = "0.20.0", features = ["csr"] }
yew-agent = "0.2.0"
