[package]
name = "wikit-ui"
version = "0.1.0"
description = "Wikit Dictionary"
authors = ["ikey4u pwnkeeper@gmail.com"]
license = "MIT"
repository = "https://github.com/ikey4u/wikit"
default-run = "wikit-ui"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
#tauri-build = { git = "https://github.com/tauri-apps/tauri.git", rev = "tauri-v1.0.0-beta.1" }
tauri-build = { path = "../../../tauri/core/tauri-build" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
#tauri = { git = "https://github.com/tauri-apps/tauri.git", rev = "tauri-v1.0.0-beta.1", features = ["api-all"] }
tauri = { path = "../../../tauri/core/tauri", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[patch.crates-io]
tao = { git = "https://github.com/tauri-apps/tao", rev = "66360eea4ec6af8a52afcebb7700f486a0092168" }
